# neuromorphic-checkpoint-two

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.template  pyproject.toml  run.py  settings.toml
alembic/versions/: 176917027ec8_.py  553101713d1f_.py
app/: page.py
app/common/: log.py
app/common/configs/: startup.py
app/database/: connection.py  dataframe.py  models.py
app/dtos/: thingspeak.py
app/services/: linear_regression.py  thingspeak_api.py
