[tool.poetry]
name = "neuromorphic-checkpoint-two"
version = "0.1.0"
description = "Faculty Project - Neuromorphic Computing and Supercomputers"
authors = ["Eduardo Matos <eduardo-matos004@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
streamlit = "^1.21.0"
dynaconf = "^3.1.12"
requests = "^2.28.2"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
